--- a/architecture/index.html
+++ b/architecture/index.html
@@ -115,18 +115,21 @@
   <!--head-->
   <!--body-->
 
-  <div class="blankHXL"></div>
-  <div class="body-landing">
-    <div class="body-intro">
+  <div class="blankHL"></div>
+  <div class="blankPhoneS"></div>
+
+  <div class="landingIntro">
+    <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
-    <div class="body-intro" data-aos="fade-up">
-      <div class="body-v">
+    <div class="intro" data-aos="fade-up">
+      <div class="introVer">
+
         <div class="t-hi">I'm Vicky.</div>
       </div>
       <p class="divider"></p>
-      <div class="body-v">
-        <div class="body-intro">
+      <div class="introVer">
+        <div class="intro">
           <span class="t-me">architecture</span>
           <span class="divider1"></span>
           <span class="t-me"> design</span>
@@ -153,7 +156,7 @@
   <!--architecture 1-->
   <div id="ytrigger-arch">
     <div class="row-change marginAll marginAll1920 centerHorz centerVer">
-      <a href="./recreation_commons"><img src="./ar_01.svg" id="rc1"> </a>
+      <a href="./recreation_commons"><img src="./ar_01.svg" class="widthS"> </a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
