--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -112,7 +112,7 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
-  <div class="blankPHONE"></div>
+  <div class="blankPhone"></div>
   <div class="blankHXL"></div>
   <div class="blankHXL"></div>
 
