--- a/photography/index.html
+++ b/photography/index.html
@@ -113,19 +113,21 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
+  <div class="blankPhoneS"></div>
 
-  <div class="body-landing">
-    <div class="body-intro">
+  <div class="landingIntro">
+    <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
-    <div class="body-intro" data-aos="fade-up">
-      <div class="body-v">
+    <div class="intro" data-aos="fade-up">
+      <div class="introVer">
+
         <div class="t-hi">I'm Vicky.</div>
       </div>
       <p class="divider"></p>
-      <div class="body-v">
-        <div class="body-intro">
+      <div class="introVer">
+        <div class="intro">
           <span class="t-me">photography</span>
           <span class="divider1"></span>
           <span class="t-me"> observation</span>
