--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -120,7 +120,7 @@
   <!--about appointmentmaker-->
 
   <div class="bgGrey">
-    <div class="blankPHONE"></div>
+    <div class="blankPhone"></div>
 
     <div class="column centerVer">
 
