--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -122,7 +122,7 @@
   <div class="bgGrey" id="bg-color-trigger">
 
     <div class="blankHL blankHL1920"></div>
-    <div class="blankPHONE"></div>
+    <div class="blankPhone"></div>
     <div class="marginAll marginAll1920 row-change centerVer">
 
       <img class="float widthL widthL1920 " src="../../layout_gardenershub.png" alt="Gardenrs' Hub">
