--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankPHONE"></div>
+  <div class="blankPhone"></div>
   <div class="blankHL"></div>
   <div class="marginAll marginAll1920">
 
