--- a/project/index.html
+++ b/project/index.html
@@ -119,17 +119,17 @@
 
   <!--body-->
   <div class="blankHXL"></div>
-  <div class="body-landing">
-    <div class="body-intro">
+  <div class="landingIntro">
+    <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
     </div>
-    <div class="body-intro" data-aos="fade-up">
-      <div class="body-v">
+    <div class="intro" data-aos="fade-up">
+      <div class="introVer">
         <div class="t-hi">I'm Vicky.</div>
       </div>
       <p class="divider"></p>
-      <div class="body-v">
-        <div class="body-intro">
+      <div class="introVer">
+        <div class="intro">
           <span class="t-me">product</span>
           <span class="divider1"></span>
           <span class="t-me"> design</span>
