--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
       <div class="carousel-content">
         <div class="slide">
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <a href="/project/meal_planner">
               <img class="widthL" src="./layout_MealPlanner.png" alt="Meal Planner">
             </a>
@@ -181,7 +181,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <a href="/project/gardeners_hub">
               <img class="widthL"  src="./layout_GardenersHub.png" alt="Gardeners' Hub">
             </a>
@@ -195,7 +195,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <a href="/appointment_maker">
               <img class="widthL"  src="./layout_AppointmentMaker.png" alt="APPOINTMENT MAKER">
             </a>
@@ -210,7 +210,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <p href="/appointment_maker">
               <img class="widthL" src="./layout_IndieRockbands.png" alt="INDIE ROCK BANDS">
             </p>
@@ -226,7 +226,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change centerVer">
+          <div class="rowChng centerVer">
             <p href="/medication_reminder">
               <img class="widthL"  src="./layout_MedicationReminder.png" alt="APPOINTMENT MAKER">
             </p>
@@ -268,7 +268,7 @@
       <div class="carousel-content">
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/recreation_commons/">
                 <img id="widthRC" class="widthS" src="./ar_1.svg" alt="Architecture">
@@ -291,7 +291,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/narrow_stripes/">
                 <img class="widthM  shadowAll" src="./ar_2.jpg" alt="Architecture">
@@ -312,7 +312,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture">
                 <img class="widthM " src="./ar_3.jpg" alt="Architecture">
@@ -331,7 +331,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/manifold_ground/">
                 <img class="widthM  shadowAll" src="./ar_4.jpg" alt="Architecture">
@@ -351,7 +351,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/thesis_studio/">
                 <img class="widthM  shadowAll" src="./ar_5.jpg" alt="Architecture">
@@ -372,7 +372,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/recovery_of_river_edges/">
                 <img class="widthM  shadowAll" src="./ar_6.jpg" alt="Architecture">
@@ -392,7 +392,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture/the_rotation_of_curves/">
                 <img class="widthM shadowAll" src="./ar_7.jpg" alt="Architecture">
@@ -412,7 +412,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture">
                 <img class="widthM  shadowAll" src="./ar_8.jpg" alt="Architecture">
@@ -431,7 +431,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/architecture">
                 <img class="widthM  shadowAll" src="./ar_9.jpg" alt="Architecture">
@@ -473,7 +473,7 @@
       </div>
       <div class="carousel-content">
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_1.jpg" alt="Photography">
@@ -490,7 +490,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_2.jpg" alt="Photography">
@@ -507,7 +507,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_3.jpg" alt="Photography">
@@ -524,7 +524,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_4.jpg" alt="Photography">
@@ -542,7 +542,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_5.jpg" alt="Photography">
@@ -559,7 +559,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_6.jpg" alt="Photography">
@@ -576,7 +576,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_7.jpg" alt="Photography">
@@ -594,7 +594,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_8.jpg" alt="Photography">
@@ -611,7 +611,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_9.jpg" alt="Photography">
@@ -630,7 +630,7 @@
 
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_10.jpg" alt="Photography">
@@ -648,7 +648,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_11.jpg" alt="Photography">
@@ -666,7 +666,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_12.jpg" alt="Photography">
@@ -684,7 +684,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_13.jpg" alt="Photography">
@@ -702,7 +702,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_14.jpg" alt="Photography">
@@ -719,7 +719,7 @@
           </div>
         </div>
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_15.jpg" alt="Photography">
@@ -737,7 +737,7 @@
         </div>
 
         <div class="slide">
-          <div class="row-change marginAll centerVer">
+          <div class="rowChng marginAll centerVer">
             <div class="column">
               <a href="/photography">
                 <img class="widthM shadowAll" src="./pg_16.jpg" alt="Photography">
@@ -785,9 +785,9 @@
     <div class="blankHM"></div>
 
 
-    <div class="row-change">
+    <div class="rowChng">
       <div class="widthM widthM1920 column marginM">
-        <div class="body-left titleL" data-aos="fade-up">
+        <div class="titleL" data-aos="fade-up">
           EDUCATION </div>
         <div class="blankHS"></div>
 
@@ -814,7 +814,7 @@
 
       <div class="widthM widthM1920 column marginM">
 
-        <div class="body-left titleL" data-aos="fade-up">
+        <div class="titleL" data-aos="fade-up">
           SKILL&TOOLS
         </div>
 
@@ -867,7 +867,7 @@
 
       <div class="widthM widthM1920 column marginM">
 
-        <div class="body-left titleL" data-aos="fade-up">
+        <div class="titleL" data-aos="fade-up">
           EXPERIENCE </div>
         <div class="blankHS"></div>
 
