--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -1108,7 +1108,7 @@
   </div>
 
   <div class="blankHM"></div>
-  <div class="colorGHBg1 align-bottom" id="bg-color-opc1">
+  <div class="colorGHBg1 align-bottom" >
 
     <div class="marginAll marginAll1920 row-change centerHorz">
 
@@ -2691,25 +2691,25 @@
     </div>
     <div class="carouselContentGH">
       <div class="slideGH">
-        <img class="widthXS" src="lf_1.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_1.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_2.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_2.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_3.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_3.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_4.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_4.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_6.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_6.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_7.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_7.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="lf_8.png" alt="LOW-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="lf_8.png" alt="LOW-FIDELITY WIREFRAMES">
       </div>
     </div>
     <div class="nav-gh nav-right-gh">
@@ -2717,7 +2717,7 @@
     </div>
   </div>
   <!-- wireframes low-fi -->
-  <div class="blankHL"></div>
+  <div class="blankHXL"></div>
 
   <!-- wireframes mid-fi -->
 
@@ -2730,73 +2730,73 @@
     </div>
     <div class="carouselContentGH">
       <div class="slideGH">
-        <img class="widthXS" src="mf_ld.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_ld.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_ld1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_ld1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_ld2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_ld2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_rg1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_rg1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_rg2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_rg2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_rg3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_rg3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_rg4.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_rg4.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_rg5.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_rg5.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_login1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_login1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_login2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_login2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_login3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_login3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_home.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_home.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_home1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_home1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_home2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_home2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_sell1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_sell1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_sell2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_sell2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_sell3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_sell3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_sell4.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_sell4.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_plantpf1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_plantpf1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_plantpf2.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_plantpf2.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_plantpf3.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_plantpf3.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_ua.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_ua.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
       <div class="slideGH">
-        <img class="widthXS" src="mf_ua1.png" alt="MID-FIDELITY WIREFRAMES">
+        <img class="widthS widthS1920" src="mf_ua1.png" alt="MID-FIDELITY WIREFRAMES">
       </div>
     </div>
     <div class="nav-gh nav-right-gh">
@@ -2804,6 +2804,7 @@
     </div>
   </div>
   <!-- wireframes mid-fi -->
+  <div class="blankHXL"></div>
 
   <!-- wireframes hi-fi -->
 
@@ -2813,7 +2814,7 @@
     <div class="blankHM"></div>
     <div class="marginAll marginAll1920">
       <P class="titleM ">HIGH-FIDELITY WIREFRAMES </P>
-      <div class="blankHL"></div>
+      <div class="blankHM"></div>
 
     </div>
 
