--- a/project/index.html
+++ b/project/index.html
@@ -118,7 +118,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankHXL"></div>
+  <div class="blankHL"></div>
   <div class="landingIntro">
     <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -162,7 +162,7 @@
   <!--MEAL PLANNER-->
   <div id="ytrigger3">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a href="/project/meal_planner">
         <img src="../layout_mealplanner.png" alt="Meal Planner">
       </a>
@@ -181,7 +181,7 @@
   <!--GARDENERS HUB-->
   <div id="ytrigger4">
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
       <div class="column widthM">
         <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
         <p class="lineHorizAll"></p>
@@ -203,7 +203,7 @@
   <div id="ytrigger">
 
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
       <a href="/project/appointment_maker">
         <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
       </a>
@@ -229,7 +229,7 @@
 
 
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
@@ -254,8 +254,13 @@
   <div id="ytrigger2">
 
 
-    <div class="row-change marginAll marginAll1920 centerHorz centerVer row-changeRV">
+    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
 
+      <p href="/project/meal_planner">
+        <img src="../layout_MedicationReminder.png" alt="Meal Planner">
+      </p>
+      <div class="blankVer">
+      </div>
       <div class="column widthM">
         <p href="/project/meal_planner" class="titleL" data-aos="fade-up">Medication Reminder</p>
         <p class="lineHorizAll"></p>
@@ -265,16 +270,12 @@
         <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
         <p class="textM">Coming Soon</p>
       </div>
-      <div class="blankVer">
-      </div>
-      <p href="/project/meal_planner">
-        <img src="../layout_MedicationReminder.png" alt="Meal Planner">
-      </p>
+
     </div>
 
   </div>
   <!--Social Good-->
-  <div class="blankHL"></div>  <div class="blankHL"></div>
+  <div class="blankHM"></div>
 
 
   <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
@@ -282,7 +283,7 @@
 
 
 
-  <div class="blankHXL"></div>
+  <div class="blankHM"></div>
 
 
 
